getting kicked out, panicking about deadline. damn it

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,7 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_menu_activity">menu_activity</string>
     <string name="title_activity_main_menu">main_menu</string>
+    <string name="title_activity_add">AddActivity</string>
+    <string name="tap">Tap the image to open the camera!!</string>
 
 </resources>
